# Krorus

./: .gitignore  Krorus.lnk  LICENSE  README.md  main.py  pyrightconfig.json  requirements.txt  setup_gui.py  start.bat
chainlog_rs/: Cargo.toml  pyproject.toml
chainlog_rs/src/: lib.rs
data/: ignorewords.json
scripts/: alert_domains.json  core.py  whitelist.json
scripts/cogs/: append_alertdomain.py  append_ignoreword.py  append_whitelist.py  check_user.py  list_users.py  set_data.py  whisper.py
scripts/modules/: audio.py  chainlog.py  code.py  database.py  fernet.py  logs.py  message.py  pagination.py  rsa.py
